landscape overflow fix

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -401,9 +401,6 @@ label #cancel{
 	.row{
 		width:100vw;
 	}
-	.col-lg-3{
-		margin-left:0px;
-	}
 }
 
 @media (orientation:landscape) and (max-width:830px) and (max-height:480px){
@@ -421,6 +418,9 @@ label #cancel{
 	}
 	.login-icon{
 		margin-right:180px;
+	}
+	.col-lg-3{
+		margin-left:10px;
 	}
 }
 
